# finder

./: .gitattributes  .gitignore  .goreleaser.yml  CHANGELOG.md  CMakeLists.txt  CUSTOM_TEMPLATES.md  IDEAS.md  INFO.txt  LICENSE  Makefile  README.md  ansicolors.hpp  ansicolors.py  go.mod  go.sum  loader.go  main.cpp  main.go
.finder/shema/: finder-template.schema.json  finder-template.v2.schema.json
.finder/templates/: EXAMPLE_custom_project.json5
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: buildcheck.yml  release.yml  release2.yml  releasebuild.yml
.zed/: settings.json
cli/: commands.go  help.go
cli/color/: color.go
cmd/finder/: main.go
color/: color.go  color_test.go
default/: go.json5  rust.json5
internal/cli/: ARCHITECTURE.md  QUICKSTART.md  REORGANIZATION.md  commands.go  commands_test.go  handle.go  handlers.go  help.go  help_test.go  loader.go  parser.go  parser_test.go
internal/config/: config.go
internal/finderversion/: version.go
internal/history/: history.go
internal/loader/: blocked.go  (+5 more)
loader/: customloader.go  loader.go
search/: helper.go  main.go  search.go
structure/: folderstruct.go
templates/: CopperCube.json5  GameMaker.json5  UE.json5  Unity.json5  cmake.json5  default.json5  dotnet.json5  flutter.json5  git.json5  gituncommit.json5  go.json5  godot.json5  gradle.json5  idea.json5  jekyll.json5  loader.go  mcdatapack.json5  mcresourcepack.json5  minecraftworld.json5  npm.json5  python.json5  renpy.json5  ruby.json5  sln.json5  tauri2.json5
(+415 files in other folders)
